--- a/TensorFlow/tensorflow01.ipynb
+++ b/TensorFlow/tensorflow01.ipynb
@@ -20,20 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2.0.0\n",
       "2.2.4-tf\n"
      ]
     }
    ],
    "source": [
     "# print(tf.VERSION)\n",
-    "\n",
+    "print(tf.__version__)\n",
     "print(tf.keras.__version__)"
    ]
   },
