--- a/DeepLearningWithPyTorch-A60MinuteBlitz/TestSequential.ipynb
+++ b/DeepLearningWithPyTorch-A60MinuteBlitz/TestSequential.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -21,6 +21,7 @@
       "  (1): ReLU()\n",
       "  (2): Conv2d(20, 64, kernel_size=(5, 5), stride=(1, 1))\n",
       "  (3): ReLU()\n",
+      "  (4): Linear(in_features=64, out_features=10, bias=True)\n",
       ")\n"
      ]
     }
@@ -38,6 +39,7 @@
     "          nn.ReLU()\n",
     "        )\n",
     "\n",
+    "model.add_module('4', nn.Linear(64, 10))\n",
     "print(model)"
    ]
   },
@@ -87,19 +89,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ReLU()\n"
+      "Linear(in_features=64, out_features=10, bias=True)\n"
      ]
     }
    ],
    "source": [
-    "print(model[1])"
+    "print(model[4])"
    ]
   },
   {
