--- a/TestEverything/DeepLearningWithPyTorch-A60MinuteBlitz/02autograd_tutorial.ipynb
+++ b/TestEverything/DeepLearningWithPyTorch-A60MinuteBlitz/02autograd_tutorial.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T07:50:07.627992Z",
+     "start_time": "2019-10-26T07:50:05.995404Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline"
@@ -67,7 +72,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T07:50:14.518796Z",
+     "start_time": "2019-10-26T07:50:13.616285Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch"
@@ -85,7 +95,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T07:50:15.821501Z",
+     "start_time": "2019-10-26T07:50:15.769721Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -112,7 +127,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T07:50:18.961153Z",
+     "start_time": "2019-10-26T07:50:18.918512Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -139,13 +159,18 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T07:50:21.537260Z",
+     "start_time": "2019-10-26T07:50:21.510528Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<AddBackward0 object at 0x0000020394A93B00>\n"
+      "<AddBackward0 object at 0x000001FC0E663438>\n"
      ]
     }
    ],
@@ -164,7 +189,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T07:50:23.261928Z",
+     "start_time": "2019-10-26T07:50:23.200375Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -194,7 +224,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T07:50:25.993414Z",
+     "start_time": "2019-10-26T07:50:25.920781Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -202,7 +237,7 @@
      "text": [
       "False\n",
       "True\n",
-      "<SumBackward0 object at 0x0000020394A93978>\n"
+      "<SumBackward0 object at 0x000001FC03E4EF60>\n"
      ]
     }
    ],
@@ -231,7 +266,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T07:50:31.121906Z",
+     "start_time": "2019-10-26T07:50:31.086444Z"
+    }
+   },
    "outputs": [],
    "source": [
     "out.backward()"
@@ -249,7 +289,12 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T07:50:33.254538Z",
+     "start_time": "2019-10-26T07:50:33.233549Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -335,25 +380,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T09:08:39.684160Z",
+     "start_time": "2019-10-26T09:08:39.596625Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([  276.5030,  1435.4491, -1040.2098], grad_fn=<MulBackward0>)\n"
+      "tensor([-0.4387,  1.8031,  1.1978], requires_grad=True)\n",
+      "tensor([-0.8773,  3.6062,  2.3956], grad_fn=<MulBackward0>)\n",
+      "tensor([-0.8773,  3.6062,  2.3956])\n",
+      "tensor([-224.5918,  923.1838,  613.2844], grad_fn=<MulBackward0>)\n",
+      "9\n"
      ]
     }
    ],
    "source": [
     "x = torch.randn(3, requires_grad=True)\n",
-    "\n",
+    "print(x)\n",
     "y = x * 2\n",
+    "\n",
+    "print(y)\n",
+    "print(y.data)\n",
+    "i = 1\n",
     "while y.data.norm() < 1000:\n",
     "    y = y * 2\n",
+    "    i += 1\n",
     "\n",
-    "print(y)"
+    "print(y)\n",
+    "print(i)"
    ]
   },
   {
@@ -376,8 +436,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T09:46:04.097977Z",
+     "start_time": "2019-10-26T09:46:04.044637Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -406,8 +471,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T09:46:07.059672Z",
+     "start_time": "2019-10-26T09:46:06.986229Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -424,7 +494,7 @@
     "print((x ** 2).requires_grad)\n",
     "\n",
     "with torch.no_grad():\n",
-    "\tprint((x ** 2).requires_grad)"
+    "    print((x ** 2).requires_grad)"
    ]
   },
   {
