--- a/TestEverything/TestAutograd.ipynb
+++ b/TestEverything/TestAutograd.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/cs231-l4-bp.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:06:32.833803Z",
-     "start_time": "2019-10-16T03:06:31.723347Z"
+     "end_time": "2019-10-26T09:11:01.229136Z",
+     "start_time": "2019-10-26T09:10:59.918564Z"
     }
    },
    "outputs": [],
@@ -16,26 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:07:27.634267Z",
-     "start_time": "2019-10-16T03:07:27.579686Z"
+     "end_time": "2019-10-26T07:38:48.474656Z",
+     "start_time": "2019-10-26T07:38:48.407057Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.1000,  0.5000],\n",
-       "        [-0.3000,  0.8000]], requires_grad=True)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "w = torch.tensor([[0.1, 0.5],[-0.3, 0.8]], requires_grad=True)\n",
     "w"
@@ -43,47 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:07:35.058104Z",
-     "start_time": "2019-10-16T03:07:35.013149Z"
+     "end_time": "2019-10-26T07:38:49.474875Z",
+     "start_time": "2019-10-26T07:38:49.445810Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(w.grad)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:07:42.349650Z",
-     "start_time": "2019-10-16T03:07:42.319712Z"
+     "end_time": "2019-10-26T07:38:50.089066Z",
+     "start_time": "2019-10-26T07:38:50.056282Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.2000, 0.4000], requires_grad=True)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = torch.tensor([0.2, 0.4], requires_grad=True)\n",
     "x"
@@ -91,69 +67,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:11:03.907540Z",
-     "start_time": "2019-10-16T03:11:03.880578Z"
+     "end_time": "2019-10-26T07:38:52.256952Z",
+     "start_time": "2019-10-26T07:38:52.228812Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(w.grad)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:11:04.536705Z",
-     "start_time": "2019-10-16T03:11:04.505737Z"
+     "end_time": "2019-10-26T07:38:52.724922Z",
+     "start_time": "2019-10-26T07:38:52.686834Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([2]) torch.Size([2, 2])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(x.shape, w.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:11:05.093169Z",
-     "start_time": "2019-10-16T03:11:05.060426Z"
+     "end_time": "2019-10-26T07:38:52.923353Z",
+     "start_time": "2019-10-26T07:38:52.898280Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.2200, 0.2600], grad_fn=<MvBackward>)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "q = torch.matmul(w, x)\n",
     "q"
@@ -161,44 +110,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:11:06.652912Z",
-     "start_time": "2019-10-16T03:11:06.610312Z"
+     "end_time": "2019-10-26T07:38:53.117190Z",
+     "start_time": "2019-10-26T07:38:53.087126Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(w.grad)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:11:07.203437Z",
-     "start_time": "2019-10-16T03:11:07.146667Z"
+     "end_time": "2019-10-26T07:38:53.388819Z",
+     "start_time": "2019-10-26T07:38:53.363656Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0.1160, grad_fn=<PowBackward0>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f = torch.pow(torch.norm(q), 2)\n",
     "print(f)"
@@ -206,55 +139,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:11:10.018825Z",
-     "start_time": "2019-10-16T03:11:09.987248Z"
+     "end_time": "2019-10-26T07:38:53.527719Z",
+     "start_time": "2019-10-26T07:38:53.497248Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(x.requires_grad)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:11:25.982009Z",
-     "start_time": "2019-10-16T03:11:25.945811Z"
+     "end_time": "2019-10-26T07:38:55.425623Z",
+     "start_time": "2019-10-26T07:38:55.401512Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(w.requires_grad)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:11:46.099939Z",
-     "start_time": "2019-10-16T03:11:46.033818Z"
+     "end_time": "2019-10-26T07:38:55.657279Z",
+     "start_time": "2019-10-26T07:38:55.626685Z"
     }
    },
    "outputs": [],
@@ -264,46 +181,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:11:53.436377Z",
-     "start_time": "2019-10-16T03:11:53.405304Z"
+     "end_time": "2019-10-26T07:38:57.139777Z",
+     "start_time": "2019-10-26T07:38:57.112356Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([-0.1120,  0.6360])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(x.grad)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:11:54.201122Z",
-     "start_time": "2019-10-16T03:11:54.173856Z"
+     "end_time": "2019-10-26T07:38:57.374625Z",
+     "start_time": "2019-10-26T07:38:57.347977Z"
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0.0880, 0.1760],\n",
-      "        [0.1040, 0.2080]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(w.grad)"
    ]
@@ -317,26 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-16T03:12:59.789933Z",
-     "start_time": "2019-10-16T03:12:59.742870Z"
+     "end_time": "2019-10-26T07:38:59.628740Z",
+     "start_time": "2019-10-26T07:38:59.604504Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0., 0.],\n",
-       "        [0., 0.]])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "w.grad.data.zero_()\n",
     "w.grad"
@@ -344,22 +232,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T07:39:01.447744Z",
+     "start_time": "2019-10-26T07:39:01.407441Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "d = torch.mean(w)\n",
+    "d.backward()\n",
+    "print(w.grad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "张量对张量的求导"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T09:11:07.082785Z",
+     "start_time": "2019-10-26T09:11:07.040884Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0., 1., 2.], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.arange(3, dtype=torch.float64)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T09:11:09.447188Z",
+     "start_time": "2019-10-26T09:11:09.427285Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0., 1., 2.], dtype=torch.float64, requires_grad=True)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.requires_grad_(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T09:11:11.773850Z",
+     "start_time": "2019-10-26T09:11:11.746783Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([2., 3., 4.], dtype=torch.float64, grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = x + 2\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T09:11:14.908083Z",
+     "start_time": "2019-10-26T09:11:14.895329Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "z = 2 * y "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T09:11:15.676138Z",
+     "start_time": "2019-10-26T09:11:15.653963Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([4., 6., 8.], dtype=torch.float64, grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T09:14:21.826366Z",
+     "start_time": "2019-10-26T09:14:21.787130Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.2500, 0.2500],\n",
-      "        [0.2500, 0.2500]])\n"
+      "tensor([1.1000, 2.0000, 1.0001], dtype=torch.float64)\n"
      ]
     }
    ],
    "source": [
-    "d = torch.mean(w)\n",
-    "d.backward()\n",
-    "print(w.grad)"
+    "v = torch.tensor([1.0, 1.0, 1.0], dtype=torch.float)\n",
+    "y.backward(v)\n",
+    "\n",
+    "print(x.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-26T09:14:35.268025Z",
+     "start_time": "2019-10-26T09:14:35.241008Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1.1000, 2.0000, 1.0001], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.grad"
    ]
   },
   {
