--- a/TestEverything/TestRNN.ipynb
+++ b/TestEverything/TestRNN.ipynb
@@ -47,7 +47,7 @@
     "* **num_layers** – Number of recurrent layers. E.g., setting `num_layers=2` would mean stacking two RNNs together to form a stacked RNN, with the second RNN taking in outputs of the first RNN and computing the final results. Default: 1【RNN的层数，如果设置`num_layers=2`，则意味着有两个RNN连接在一起，其中第二个RNN的输入为第一个RNN的输出。缺省值为1.】\n",
     "* **nonlinearity** – The non-linearity to use. Can be either '`tanh`' or '`relu`'. Default: '`tanh`'【作用函数，缺省值为'`tanh`'，如果设置成 '`relu`'，则作用函数为$ReLU$函数】\n",
     "* **bias** – If `False`, then the layer does not use bias weights *b_ih* and *b_hh*. Default: `True`【如果设置成`False`则隐藏层没有参数*b_ih*和*b_hh*，缺省值为】\n",
-    "* **batch_first** – If `True`, then the input and output tensors are provided as $(batch, seq, feature)$. Default: `False`\n",
+    "* **batch_first** – If `True`, then the input and output tensors are provided as $(batch, seq, feature)$. Default: `False`【其值若为`True`，则输入和输出的张量都要提供 $(batch, seq, feature)$. 缺省值为 `False`】\n",
     "* **dropout** – If non-zero, introduces a Dropout layer on the outputs of each RNN layer except the last layer, with dropout probability equal to `dropout`. Default: 0\n",
     "* **bidirectional** – If `True`, becomes a bidirectional RNN. Default: `False`"
    ]
@@ -561,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
